# AudioToText

./: .env.example  .gitignore  README.md  audio_transcriber.py  pyproject.toml
src/audio_to_text/: __init__.py  cli.py  interfaces.py  logging_config.py  models.py  openai_client.py  transcription_service.py
src/audio_to_text/config/: __init__.py  settings.py
tests/: test_audio_transcriber.py  test_cli.py  test_logging_config.py  test_settings.py  test_transcription_service.py
web/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
web/src/app/api/auth/login/: route.ts
web/src/app/api/transcribe/: route.ts
web/src/app/app/: page.tsx
web/src/app/login/: page.tsx
web/src/lib/: auth.ts
